--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -14,7 +14,9 @@
     "bcryptjs": "^3.0.3",
     "body-parser": "^2.2.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.4"
   },
   "devDependencies": {
